 - GBA Video: Invalidate map cache when modifying BGCNT (fixes mgba.io/i/1846)
 - GBA Video: Don't draw sprites using unmapped VRAM in GL renderer (fixes mgba.io/i/1865)
 - GBA Video: Fix rare regression blending semitransparent sprites (fixes mgba.io/i/1876)
 - GBA Video: Do not affect OBJ pixel priority when writing OBJWIN (fixes mgba.io/i/1890)
Other fixes:
 - 3DS: Redo video sync to be more precise
 - 3DS: Fix crash with libctru 2.0 when exiting
 - Core: Fix reported ROM size when a fixed buffer size is used
 - Core: Fix memory leak loading ELF files
 - GBA: Disable more checks when loading GS save with checks disabled (fixes mgba.io/i/1851)
 - GBA: Fix endianness issues in renderer proxy
 - GBA Core: Fix memory leak when loading symbols
 - Qt: Add dummy English translation file (fixes mgba.io/i/1469)
 - Qt: Fix Battle Chip view not displaying chips on some DPI settings
 - Qt: Fix camera image being upside-down sometimes (fixes mgba.io/i/829 again)
 - Qt: Fix drawing on macOS break when using OpenGL (fixes mgba.io/i/1899)
 - mGUI: Fix closing down a game if an exit is signalled
 - mVL: Fix injecting accidentally draining non-injection buffer
 - VFS: Fix directory node listing on some filesystems
Misc:
 - GBA Video: Improve speed of window texture generation on AMD

0.8.3: (2020-08-03)
Emulation fixes:
 - ARM: Fix LDM^ writeback to user-mode register
 - ARM: Fix LDM^ {pc} differences (fixes mgba.io/i/1698)
 - ARM: Fix edge case with Thumb SBC flags (fixes mgba.io/i/1818)
 - GB MBC: Fix MBC1 RAM enable bit selection
 - GB MBC: Fix MBC2 bit selection
 - GB Memory: Fix OAM DMA from top 8 kB
 - GB Video: Always initialize palette
 - GBA Savedata: Fix potential corruption when loading a 1Mbit flash save
 - GBA Video: Fix invalid read in mode 4 mosaic
 - GBA Video: Fix color of disabled screen
 - SM83: Fix flags on little endian PowerPC
Other fixes:
 - 3DS: Fix garbage on borders of scaled screens